--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,10 @@
         </dependency>
 
         <!-- Service -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-mail</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
         <!-- Dev Tools -->
         <dependency>
