--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls=true
+
+google.recaptcha.key.site=6LfVdHUqAAAAAJdNIRBlEk3HuEhihGuxO7_mtop-
+google.recaptcha.key.secret=6LfVdHUqAAAAAHsRPwSTtDrBsAsMQeBAR7hPvuVA
